--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="container">
         <div class="container">
             <div class="row">
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
 
                         <div class="flip-box-inner">
@@ -34,10 +34,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
+
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
                             </div>
                             <div class="flip-box-back">
@@ -46,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -60,7 +61,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -72,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -84,7 +85,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -98,7 +99,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -110,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -122,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm">
+                <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
@@ -143,6 +144,7 @@
 
     <footer>
     </footer>
-    <script src="cards.js"></script>
+    <script src="cards.js">
+</script>
 </body>
 </html>
