--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('mySound')">
 
                         <div class="flip-box-inner">
-                            <div class="flip-box-front" >
+                            <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
                             </div>
                             <div class="flip-box-back" >
@@ -33,6 +33,7 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='mySound' src='sounds/sound5.mp3'/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
