--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='mySound' src='sounds/sound5.mp3'/>
+                    <audio id='mySound' src='sounds/sound5.mp3' type="audio/mpeg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
