--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                         </div>
                     </div>
                     <audio id='mySound' src='sounds/sound5.mp3' type="audio/mpeg"/>
+                     <audio controls>
+                        <source src="sounds/sound5.mp3" type="audio/mpeg">
+                         Your browser does not support the audio tag.
+                    </audio>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box">
