--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <audio id='mySound' src='sounds/sound5.mp3' type="audio/mpeg"/>
-                    <audio controls>
+                    <audio autoplay>
                         <source src="sounds/sound1.wav" type="audio/wav">
                         <source src="sounds/sound5.mp3" type="audio/mpeg">
                         Your browser does not support the audio tag.
