--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <audio id='sound1' src='sounds/sound1.wav' type="audio/wav"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound2');" onmouseout="StopSound('sound2')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
 
@@ -45,9 +45,10 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound2' src='sounds/sound2.wav' type="audio/wav"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound3');" onmouseout="StopSound('sound3')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -57,11 +58,12 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound3' src='sounds/sound3.wav' type="audio/wav"/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound4');" onmouseout="StopSound('sound4')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -71,9 +73,10 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound4' src='sounds/sound4.wav' type="audio/wav"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound5');" onmouseout="StopSound('sound5')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -83,9 +86,10 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound4' src='sounds/sound5.mp3' type="audio/mpeg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound6');" onmouseout="StopSound('sound6')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -95,11 +99,12 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound6' src='sounds/sound6.wav' type="audio/wav"/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound7');" onmouseout="StopSound('sound7')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -109,9 +114,10 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound6' src='sounds/sound7.mp3' type="audio/mpeg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound8');" onmouseout="StopSound('sound8')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -121,9 +127,10 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound8' src='sounds/sound8.wav' type="audio/wav"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
-                    <div class="flip-box">
+                    <div class="flip-box" onmouseover="PlaySound('sound9');" onmouseout="StopSound('sound9')">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
                                 <img src="images/back-card.jpg" alt="Banshee1" style="width:200px;height:300px">
@@ -133,6 +140,7 @@
                             </div>
                         </div>
                     </div>
+                    <audio id='sound9' src='sounds/sound9.mp3' type="audio/mpeg"/>
                 </div>
             </div>
         </div>
