--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound1' src='sounds/sound1.wav' type="audio/wav"/>
+                    <audio id='sound1' src='sounds/sound1.ogg' type="audio/ogg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box" onmouseover="PlaySound('sound2');" onmouseout="StopSound('sound2')">
