updating sounds to ogg

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound2' src='sounds/sound2.wav' type="audio/wav"/>
+                    <audio id='sound2' src='sounds/sound2.ogg' type="audio/ogg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box" onmouseover="PlaySound('sound3');" onmouseout="StopSound('sound3')">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound3' src='sounds/sound3.wav' type="audio/wav"/>
+                    <audio id='sound3' src='sounds/sound3.ogg' type="audio/ogg"/>
                 </div>
             </div>
             <div class="row">
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound4' src='sounds/sound4.wav' type="audio/wav"/>
+                    <audio id='sound4' src='sounds/sound4.ogg' type="audio/ogg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box" onmouseover="PlaySound('sound5');" onmouseout="StopSound('sound5')">
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound4' src='sounds/sound5.mp3' type="audio/mpeg"/>
+                    <audio id='sound4' src='sounds/sound5.ogg' type="audio/ogg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box" onmouseover="PlaySound('sound6');" onmouseout="StopSound('sound6')">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound6' src='sounds/sound6.wav' type="audio/wav"/>
+                    <audio id='sound6' src='sounds/sound6.ogg' type="audio/ogg"/>
                 </div>
             </div>
             <div class="row">
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound6' src='sounds/sound7.mp3' type="audio/mpeg"/>
+                    <audio id='sound6' src='sounds/sound7.ogg' type="audio/ogg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box" onmouseover="PlaySound('sound8');" onmouseout="StopSound('sound8')">
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound8' src='sounds/sound8.wav' type="audio/wav"/>
+                    <audio id='sound8' src='sounds/sound8.ogg' type="audio/ogg"/>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4">
                     <div class="flip-box" onmouseover="PlaySound('sound9');" onmouseout="StopSound('sound9')">
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id='sound9' src='sounds/sound9.mp3' type="audio/mpeg"/>
+                    <audio id='sound9' src='sounds/sound9.ogg' type="audio/ogg"/>
                 </div>
             </div>
         </div>
